bk_ida/gccida/c1/fixup_abnormal_edges
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_abnormal_edges/src/reload1.c:10003:15: error: use of undeclared identifier 'off_6CC868'
fancy_abort( &off_6CC868[4], 9527, "fixup_abnormal_edges"); 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_abnormal_edges/src/obj/reload1.o] Error 1
